add update feature for all api
